AG-10044 - Fix table spacing issue

--- a/packages/ag-charts-website/src/design-system/modules/ApiReference.module.scss
+++ b/packages/ag-charts-website/src/design-system/modules/ApiReference.module.scss
@@ -23,6 +23,10 @@
         margin-bottom: -$spacing-size-2;
         border-bottom: none;
     }
+
+    :global(.docPage) & {
+        margin-bottom: $spacing-size-4;
+    }
 }
 
 .propertyDescription {
